--- a/src/VNEDC/users/templates/users/login.html
+++ b/src/VNEDC/users/templates/users/login.html
@@ -155,7 +155,7 @@
             <div class="card">
                 <div class="card-header">
                     <div class="p-2" style="text-align: center">
-                        <img src="{% static '/pictures/eagleburgmann-logo-trans-blue.png' %}" style="width:200px;" />
+                        <img src="{% static '/pictures/login_logo.jpg' %}" style="width:100%" />
                     </div>
                 </div>
                 <div class="card-body">
