--- a/src/VNEDC/collection/templates/collection/record.html
+++ b/src/VNEDC/collection/templates/collection/record.html
@@ -2,6 +2,9 @@
 {% load crispy_forms_tags %}
 {% load custom_tags %}
 {% load i18n %}
+{% block title %}
+Electric Data Collection
+{% endblock title %}
 {% block content %}
     <div class="row">
         <div class="col-1"></div>
