--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Noah - {% block title %} {% endblock %}</title>
+    <title>Ever Global - {% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'jquery-ui\jquery-ui.min.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-4.1.3\css\bootstrap.min.css' %}">
     <script src="{% static 'base\js\umd\popper.js' %}"></script>
