--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -16,6 +16,9 @@
     }
 </script>
 {% endblock js %}
+{% block title %}
+Daily Production Information
+{% endblock title %}
 {% block content %}
     <div class="row">
         <div class="col-1"></div>
