--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -138,7 +138,7 @@ function validate(evt) {
             {% elif lang == "vi" %}
                 {{ process.process_vn }}
             {% elif lang == "zh-hans" %}
-                {{ process.process_ch }}
+                {{ process.process_cn }}
             {% else %}
                 {{ process.process_name }}
             {% endif %}
