--- a/src/VNEDC/collection/templates/collection/record.html
+++ b/src/VNEDC/collection/templates/collection/record.html
@@ -23,7 +23,7 @@ Electric Data Collection
                                 {% elif lang == "vi" %}
                                     {{ define.parameter_vn }}
                                 {% elif lang == "zh-hans" %}
-                                    {{ define.parameter_ch }}
+                                    {{ define.parameter_cn }}
                                 {% else %}
                                     {{ process.process_name }}
                                 {% endif %} {{ time }}:00
