--- a/src/VNEDC/collection/templates/collection/record.html
+++ b/src/VNEDC/collection/templates/collection/record.html
@@ -25,7 +25,7 @@ Electric Data Collection
                                 {% elif lang == "zh-hans" %}
                                     {{ define.parameter_cn }}
                                 {% else %}
-                                    {{ process.process_name }}
+                                    {{ define.parameter_name }}
                                 {% endif %} {{ time }}:00
                                 </label>
                                 <div>
