--- a/src/VNEDC/collection/templates/collection/record.html
+++ b/src/VNEDC/collection/templates/collection/record.html
@@ -29,7 +29,13 @@ Electric Data Collection
                                 {% endif %} {{ time }}:00
                                 </label>
                                 <div>
+                                    {% if define.sampling_frequency == "12H" and time == '06' %}
+                                    <input type="text" name="{{ define.parameter_name }}_{{ time }}" class="textinput textInput form-control" id="id_{{ define.parameter_name }}_{{ time }}" value="" readonly>
+                                    {% elif define.sampling_frequency == "12H" and time == '18' %}
+                                    <input type="text" name="{{ define.parameter_name }}_{{ time }}" class="textinput textInput form-control" id="id_{{ define.parameter_name }}_{{ time }}" value="" readonly>
+                                    {% else %}
                                     <input type="text" name="{{ define.parameter_name }}_{{ time }}" class="textinput textInput form-control" id="id_{{ define.parameter_name }}_{{ time }}" value="{% get_param_value define time %}" onkeypress="validate(event)">
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
