--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -13,6 +13,9 @@
     <script src="{% static 'jquery\jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'jquery-ui\jquery-ui.min.js' %}"></script>
     <script src="{% static 'bootstrap-4.1.3\js\bootstrap.min.js' %}"></script>
+    <!-- jquery-loading v1.3.0 -->
+    <link href="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.js"></script>
     <link rel="stylesheet" href="{% static 'fontawesome-5.4.2\css\all.css' %}">
     <style type="text/css">
         input:required {
