--- a/src/VNEDC/chart/templates/chart/param_value.html
+++ b/src/VNEDC/chart/templates/chart/param_value.html
@@ -33,9 +33,6 @@ var config = {
             intersect: false,
         },
         plugins: {
-            legend: {
-                position: 'top',
-            },
             title: {
                 display: true,
                 text: ''
@@ -50,7 +47,13 @@ var config = {
                     weight: 'bold'
                 },
                 formatter: Math.round,
-                padding: 6
+                padding: 6,
+                display: function (context) {
+                    if(context.dataset.label=='CONTROL RANGE LOW' || context.dataset.label=='CONTROL RANGE HIGH'){
+                        //return context.dataIndex === 0;
+                        return false;
+                    }
+                },
             },
         },
     }
