--- a/src/VNEDC/filelist/templates/filelist/file_list.html
+++ b/src/VNEDC/filelist/templates/filelist/file_list.html
@@ -20,6 +20,9 @@
 </head>
 <body>
     <h1>Files in {{ user_selection }}</h1>
+    {% if subpath %}
+        <a href="{% if subpath|cut:'/' %}{% url 'file_list_subpath' subpath|cut:'/' %}{% else %}{% url 'file_list' %}{% endif %}">Up one level</a>
+    {% endif %}
     <form method="get">
         <label for="user_selection">Select directory:</label>
         <select id="user_selection" name="user_selection">
