--- a/src/VNEDC/chart/templates/chart/param_value.html
+++ b/src/VNEDC/chart/templates/chart/param_value.html
@@ -17,7 +17,7 @@ Index
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 <script>
 // Register the plugin to all charts:
-Chart.register(ChartDataLabels);
+//Chart.register(ChartDataLabels);
 
 var chartData = {
     datasets: []
