--- a/src/VNEDC/chart/templates/chart/param_value.html
+++ b/src/VNEDC/chart/templates/chart/param_value.html
@@ -66,7 +66,7 @@ $(document).ready(function () {
     //chart.update();
 
 
-    $("#id_plant").on('change', function () {
+    $('input[name="plant"]').on('change', function () {
         Render();
     });
 
