--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -17,98 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/jquery-easy-loading@1.3.0/dist/jquery.loading.min.js"></script>
     <link rel="stylesheet" href="{% static 'fontawesome-5.4.2\css\all.css' %}">
-    <style type="text/css">
-        input:required {
-            background: #ffffe7;
-        }
-
-        select:required {
-            background: #ffffe7;
-        }
-
-        .content {
-            color: blue;
-        }
-
-        .django-ckeditor-widget{
-            display: inline !important;
-        }
-
-        img{
-            max-width:100%;
-        }
-        th{
-            font-family:arial,sans-serif,Meiryo,Microsoft JhengHei;
-        }
-        td{
-            font-family:arial,sans-serif,Meiryo,Microsoft JhengHei;
-        }
-        option{
-            font-family:arial,sans-serif,Meiryo,Microsoft JhengHei;
-        }
-        a{
-            font-family:arial,sans-serif,Meiryo,Microsoft JhengHei;
-        }
-        div{
-            font-family:arial,sans-serif,Meiryo,Microsoft JhengHei;
-        }
-        html, body {
-            height: 100%;
-        }
-        /* width */
-        ::-webkit-scrollbar {
-            width: 5px;
-            height: 5px;
-        }
-
-        /* Track */
-        ::-webkit-scrollbar-track {
-          background: #f1f1f1;
-        }
-
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-          background: #888;
-            border-radius: 5px;
-        }
-
-        /* Handle on hover */
-        ::-webkit-scrollbar-thumb:hover {
-          background: #555;
-        }
-
-        .box-nav {
-            text-align: center;
-            padding-top: 60px;
-        }
-
-        .box-nav-btn {
-            margin-top: 5px;
-            height: 50px;
-            display: block;
-        }
-
-        .box-nav a {
-            color: #CCC;
-        }
-
-        .box-nav a:hover {
-            color: #000;
-        }
-
-        .header_title {
-        font-size: 1.5em;
-        }
-
-        .value {
-            color: blue;
-            font-weight: bold;
-            border: 1px;
-            border-color: blue;
-            display: block;
-            float: left;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'base\css\base.css' %}">
     {% block head %}
     {% endblock %}
     {% block css %}
@@ -128,11 +37,50 @@
     </script>
 </head>
 <body>
-<div style="position: relative;width:100%;">
-    {% block container %}
+    <div class="sidebar collapsed" id="sidebar">
+        <div class="toggle-btn" id="toggle-btn">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="top-links">
+            <ul>
+                <li>
+                    {% include 'bases/lang.html' %}
+                </li>
+            </ul>
+        </div>
+        <ul>
+            <li><a href="{% url 'collection_index' %}"><i class="fas fa-cogs"></i> <span>關鍵參數</span></a></li>
+            <!--<li><a href="#home"><i class="fas fa-home"></i> <span>關鍵參數</span></a></li>
+            <li><a href="#contact"><i class="fas fa-envelope"></i> <span>{% trans "Contact" %}</span></a></li>
+            <li><a href="#about"><i class="fas fa-info-circle"></i> <span>{% trans "About" %}</span></a></li>-->
+        </ul>
+        <div class="bottom-links">
+            <div class="user-info">
+                <ul>
+                    <li><i class="fas fa-user"></i> <span>{{ user.username }}</span></li>
+                </ul>
+            </div>
+            <ul>
+                <li><a href="{% url 'user_info' %}"><i class="fas fa-key"></i> <span>{% trans 'Personal Setting' %}</span></a></li>
+                <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> <span>{% trans "logout" %}</span></a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="content" id="content" style="position: relative;">
+        <div class="container-fluid" style="padding-left: 0px;padding-right: 0px">
+            {% block container %}
 
-    {% endblock %}
-</div>
-
+            {% endblock %}
+        </div>
+    </div>
+    <script>
+        document.getElementById('toggle-btn').addEventListener('click', function () {
+            var sidebar = document.getElementById('sidebar');
+            var content = document.getElementById('content');
+            sidebar.classList.toggle('collapsed');
+            sidebar.classList.toggle('expanded');
+            content.classList.toggle('expanded');
+        });
+    </script>
 </body>
 </html>
