--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <ul>
-            <li><a href="{% url 'collection_index' %}"><i class="fas fa-cogs"></i> <span>關鍵參數</span></a></li>
+            <li><a href="{% url 'collection_index' %}"><i class="fas fa-cogs"></i> <span>{% trans "Key Parameter" %}</span></a></li>
             <!--<li><a href="#home"><i class="fas fa-home"></i> <span>關鍵參數</span></a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i> <span>{% trans "Contact" %}</span></a></li>
             <li><a href="#about"><i class="fas fa-info-circle"></i> <span>{% trans "About" %}</span></a></li>-->
@@ -62,7 +62,7 @@
             </div>
             <ul>
                 <li><a href="{% url 'user_info' %}"><i class="fas fa-key"></i> <span>{% trans 'Personal Setting' %}</span></a></li>
-                <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> <span>{% trans "logout" %}</span></a></li>
+                <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> <span>{% trans "Logout" %}</span></a></li>
             </ul>
         </div>
     </div>
