--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -8,17 +8,64 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
         .center-align {
             text-align: center;
         }
+
         .left-align {
             text-align: left;
+        }
+
+        #mainGrid tbody tr {
+            cursor: pointer;
+        }
+
+        .modal-xl-custom {
+            max-width: 95%; /* 根据需要调整宽度 */
+        }
+        .modal-content-custom {
+            height: 90vh; /* 根据需要调整高度 */
         }
     </style>
 </head>
 <body>
     <div id="jsGrid"></div>
+    <!-- Modal -->
+    <div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl modal-xl-custom">
+        <div class="modal-content modal-content-custom">
+          <div class="modal-header">
+            <h5 class="modal-title" id="detailModalLabel">Detail Grid</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="detailGrid"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Log Modal -->
+    <div class="modal fade" id="logGridModal" tabindex="-1" aria-labelledby="logGridModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl modal-xl-custom">
+        <div class="modal-content modal-content-custom">
+          <div class="modal-header">
+            <h5 class="modal-title" id="logGridModalLabel">Sub Grid</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="logGrid"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script type="text/javascript">
         $(function() {
@@ -37,7 +84,10 @@
                 pageButtonCount: 5,
 
                 deleteConfirm: "Do you really want to delete the client?",
-
+                rowClick: function(args) {
+                    const item = args.item;
+                    loadDetailGrid(item.Id);
+                },
                 controller: {
                     loadData: function(filter) {
                         return $.ajax({
@@ -69,25 +119,92 @@
 
                 fields: [
                     { name: "InspectionDate", type: "text", width: 50, title: "InspectionDate", autosearch: true, css: "center-align" },
-                    { name: "WorkOrderId", type: "text", width: 70, title: "WorkOrderId", autosearch: true, css: "center-align" },
+                    { name: "WorkOrderId", type: "text", width: 60, title: "WorkOrderId", autosearch: true, css: "center-align" },
                     { name: "Period", type: "text", width: 30, title: "Period", autosearch: true, css: "center-align" },
-                    { name: "RunCardId", type: "text", width: 60, title: "RunCard", autosearch: true, css: "center-align" },
+                    { name: "Id", type: "text", width: 50, title: "RunCard", autosearch: true, css: "center-align" },
                     { name: "WorkCenterTypeName", type: "text", width: 30, title: "Plant", autosearch: true, css: "center-align" },
-                    { name: "MachineName", type: "text", width: 60, title: "MachineName", autosearch: true },
+                    { name: "MachineName", type: "text", width: 70, title: "MachineName", autosearch: true },
                     { name: "LineName", type: "text", width: 40, title: "LineName", autosearch: true, css: "center-align" },
-                    { name: "Roll", type: "text", width: 30, title: "Roll", autosearch: true },
-                    { name: "measure_5", type: "text", width: 30, title: "M5", autosearch: true },
-                    { name: "Cuff", type: "text", width: 30, title: "Cuff", autosearch: true },
-                    { name: "measure_4", type: "text", width: 30, title: "M4", autosearch: true },
-                    { name: "Palm", type: "text", width: 30, title: "Palm", autosearch: true },
-                    { name: "measure_3", type: "text", width: 30, title: "M3", autosearch: true },
-                    { name: "Finger", type: "text", width: 30, title: "Finger", autosearch: true },
-                    { name: "measure_2", type: "text", width: 30, title: "M2", autosearch: true },
-                    { name: "FingerTip", type: "text", width: 30, title: "FingerTip", autosearch: true },
-                    { name: "measure_1", type: "text", width: 30, title: "M1", autosearch: true },
+                    { name: "ProductItem", type: "text", width: 100, title: "ProductItem", autosearch: true },
+                    { name: "CustomerCode", type: "text", width: 40, title: "C. Code", autosearch: true },
+                    { name: "CustomerName", type: "text", width: 70, title: "C. Name", autosearch: true },
+                    { name: "CustomerPartNo", type: "text", width: 70, title: "CustomerPartNo", autosearch: true },
+                    { name: "AQL", type: "text", width: 30, title: "AQL", autosearch: true },
+                    { name: "PlantQty", type: "text", width: 70, title: "PlantQty", autosearch: true },
                 ]
 
             });
+
+            // 加载详细数据的函数
+            function loadDetailGrid(pk) {
+                $.ajax({
+                    url: '{% url 'runcard_detail' %}'+ '?runcard=' + pk,
+                    method: 'GET',
+                    success: function(data) {
+                        $('#detailGrid').jsGrid({
+                            width: "100%",
+                            height: "500px",
+                            autoload: true,
+                            sorting: true,
+                            paging: true,
+                            data: data,
+                            rowClick: function(args) {
+                                const item = args.item;
+                                loadLogGrid(item.id, item.OptionName);
+                            },
+                            fields: [
+                                { name: "id", type: "text", width: 50, title: "RunCard", css: "center-align" },
+                                { name: "CreationTime", type: "text", width: 50, title: "RunCard", css: "center-align" },
+                                { name: "OptionName", type: "text", width: 50, title: "OptionName", css: "center-align" },
+                                { name: "Upper_InspectionValue", type: "text", width: 50, title: "Upper", css: "center-align" },
+                                { name: "InspectionValue", type: "text", width: 50, title: "Value", css: "center-align" },
+                                { name: "Lower_InspectionValue", type: "text", width: 50, title: "Lower", css: "center-align" },
+                                { name: "InspectionStatus", type: "text", width: 50, title: "Status", css: "center-align" }
+
+                            ]
+                        })
+                        $('#detailModal').modal('show');
+                    },
+                    error: function(xhr, status, error) {
+                        console.error("AJAX error: " + status + " - " + error);
+                    }
+                });
+            }
+
+            // 加载子 Log Grid 的函数
+            function loadLogGrid(pk, OptionName) {
+                $.ajax({
+                    url: '{% url 'runcard_ipqc_log' %}'+ '?runcard=' + pk + '&OptionName=' + OptionName,
+                    method: 'GET',
+                    success: function(data) {
+                        $('#logGrid').jsGrid({
+                            width: "100%",
+                            height: "400px",
+                            autoload: true,
+                            sorting: true,
+                            paging: true,
+                            data: data,
+                            rowClick: function(args) {
+                                const item = args.item;
+                                loadDetailGrid(item.id);
+                            },
+                            fields: [
+                                { name: "RunCardId", type: "text", width: 150, title: "RunCardId" },
+                                { name: "OptionName", type: "text", width: 150, title: "OptionName" },
+                                { name: "InspectionValue", type: "text", width: 150, title: "InspectionValue" },
+                                { name: "DefectCode", type: "text", width: 150, title: "DefectCode" },
+                                { name: "InspectionStatus", type: "text", width: 150, title: "InspectionStatus" },
+                                { name: "LogAction", type: "text", width: 150, title: "LogAction" },
+                                { name: "CreationTime", type: "text", width: 150, title: "CreationTime" },
+                            ]
+                        });
+                        $('#logGridModal').modal('show');
+                    },
+                    error: function(xhr, status, error) {
+                        console.error("AJAX error: " + status + " - " + error);
+                    }
+                });
+            }
 
         });
     </script>
