--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -55,7 +55,7 @@
       <div class="modal-dialog modal-xl modal-xl-custom">
         <div class="modal-content modal-content-custom">
           <div class="modal-header">
-            <h5 class="modal-title" id="logGridModalLabel">Sub Grid</h5>
+            <h5 class="modal-title" id="logGridModalLabel">Log Grid</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
