--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -128,9 +128,9 @@
                     { name: "ProductItem", type: "text", width: 100, title: "ProductItem", autosearch: true },
                     { name: "CustomerCode", type: "text", width: 40, title: "C. Code", autosearch: true },
                     { name: "CustomerName", type: "text", width: 70, title: "C. Name", autosearch: true },
-                    { name: "CustomerPartNo", type: "text", width: 70, title: "CustomerPartNo", autosearch: true },
-                    { name: "AQL", type: "text", width: 30, title: "AQL", autosearch: true },
-                    { name: "PlantQty", type: "text", width: 70, title: "PlantQty", autosearch: true },
+                    { name: "CustomerPartNo", type: "text", width: 70, title: "CustomerPartNo", autosearch: true, css: "center-align" },
+                    { name: "AQL", type: "text", width: 30, title: "AQL", autosearch: true, css: "center-align" },
+                    { name: "PlantQty", type: "text", width: 70, title: "PlantQty", autosearch: true, css: "center-align" },
                 ]
 
             });
