--- a/src/VNEDC/mes/templates/mes/index.html
+++ b/src/VNEDC/mes/templates/mes/index.html
@@ -130,7 +130,9 @@
                     { name: "CustomerName", type: "text", width: 70, title: "C. Name", autosearch: true },
                     { name: "CustomerPartNo", type: "text", width: 70, title: "CustomerPartNo", autosearch: true, css: "center-align" },
                     { name: "AQL", type: "text", width: 30, title: "AQL", autosearch: true, css: "center-align" },
-                    { name: "PlantQty", type: "text", width: 70, title: "PlantQty", autosearch: true, css: "center-align" },
+                    { name: "PlantQty", type: "text", width: 30, title: "PlantQty", autosearch: true, css: "center-align" },
+                    { name: "NormalizedUserName", type: "text", width: 30, title: "EmpId", autosearch: true, css: "center-align" },
+                    { name: "CreationTime", type: "text", width: 70, title: "CTime", autosearch: true, css: "center-align" },
                 ]
 
             });
