--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -128,16 +128,7 @@ function validate(evt) {
         {% if info %}
             {% if request.session.plant %}
             <a href="{% url 'daily_info_create' %}" class="btn btn-info" style="width:180px;">
-
-                {% if lang == "zh-hant" %}
-                    生產資料
-                {% elif lang == "vi" %}
-                    phương tiện sản xuất
-                {% elif lang == "zh-hans" %}
-                    生产资料
-                {% else %}
-                    Production Data
-                {% endif %}
+                {% trans 'Production Data' %}
             </a>
             {% endif %}
             {% for process in processes %}
