--- a/src/VNEDC/chart/templates/chart/param_value.html
+++ b/src/VNEDC/chart/templates/chart/param_value.html
@@ -169,7 +169,7 @@ $(document).ready(function () {
                 $("body").loading("stop");  //Loading Hide
                 $("#id_control_high").val(data.control_high);
                 $("#id_control_low").val(data.control_low);
-                $("#btnCondition").click(); //Menu Shrink
+                //$("#btnCondition").click(); //Menu Shrink
 
             },
             error: function(jqXHR, textStatus, ex) {
