--- a/src/VNEDC/users/templates/users/base.html
+++ b/src/VNEDC/users/templates/users/base.html
@@ -12,8 +12,8 @@
     <div class="row">
         <div class="col">
             {% if user.is_superuser %}
-            <button type="button" class="btn btn-success" onclick="location.href='{% url 'user_create' %}'">新增使用者</button>
-            <button type="button" class="btn btn-success" onclick="location.href='{% url 'user_list' %}'">使用者列表</button>
+            <button type="button" class="btn btn-success" onclick="location.href='{% url 'user_create' %}'">{% trans "Add User" %}</button>
+            <button type="button" class="btn btn-success" onclick="location.href='{% url 'user_list' %}'">{% trans "User List" %}</button>
             {% endif %}
         </div>
         <div class="row pr-3">
