--- a/src/VNEDC/users/templates/users/info.html
+++ b/src/VNEDC/users/templates/users/info.html
@@ -1,7 +1,8 @@
 {% extends 'users/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block title %}
-    會員資料修改
+    {% trans "User Information" %}
 {% endblock %}
 
 {% block js %}
@@ -13,7 +14,7 @@
     {% csrf_token %}
     {% crispy form %}
     <div class="pb-4" style="text-align: center;">
-      <input class="btn btn-success" type="submit" value="儲存" />
+      <input class="btn btn-success" type="submit" value="{% trans "save" %}" />
     </div>
     {% if messages %}
         {% for message in messages %}
