--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -10,10 +10,19 @@
 </style>
 {% endblock css %}
 {% block js %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script>
     function validation() {
         return true;
     }
+
+    $(document).ready(function() {
+        $('.select2').select2({
+            placeholder: '---',
+            allowClear: true
+        });
+    });
 </script>
 {% endblock js %}
 {% block title %}
