--- a/src/VNEDC/collection/templates/collection/daily_info_create.html
+++ b/src/VNEDC/collection/templates/collection/daily_info_create.html
@@ -7,6 +7,9 @@
     font-size: 18pt;
 }
 
+.select2-container {
+    width: 210px !important; /* 设置Select2的宽度 */
+}
 </style>
 {% endblock css %}
 {% block js %}
